# autoware_mini_practice

./: .gitignore  README.md
practice_1/: CMakeLists.txt  README.md  package.xml
practice_1/launch/: practice_1.launch
practice_1/nodes/: publisher.py
practice_2/: README.md  localizer.py
practice_2/launch/: practice_2.launch
practice_3/: README.md  package.xml
practice_3/launch/: practice_3.launch
practice_4/: README.md  package.xml
practice_4/launch/: practice_4.launch
practice_5/: CMakeLists.txt  README.md  package.xml
practice_5/launch/: control.launch  detection.launch  localization.launch  planning.launch  practice_5.launch
practice_6/: CMakeLists.txt  README.md  package.xml
practice_6/config/: detection.yaml  planning.yaml  platform.urdf
practice_6/launch/: control.launch  dashboard.launch  detection_bag.launch  detection_sim.launch  localization.launch  planning.launch  practice_6_bag.launch  practice_6_sim.launch
practice_6/nodes/detection/lidar_cluster/: cluster_detector.py
practice_6/nodes/detection/tracking/: ema_tracker.py
practice_6/nodes/planning/local/: simple_local_planner.py
practice_6/nodes/planning/visualization/: lanelet2_map_visualizer.py
practice_6/rviz/: practice_6.rviz
practice_7/: CMakeLists.txt  README.md  package.xml
practice_7/config/: detection.yaml  planning.yaml
practice_7/launch/: control.launch  dashboard.launch  detection.launch  localization.launch  obstacle_detection.launch  planning.launch  practice_7.launch  traffic_light_detection.launch
practice_7/rviz/: practice_7.rviz
practice_8/: CMakeLists.txt  README.md  package.xml
practice_8/config/: control.yaml  (+1 more)
(+36 files in other folders)
