<package format="2">
  <name>practice_6</name>
  <version>0.0.1</version>
  <description>The practice_6 package</description>
  <maintainer email="edgar@ut.ee">edgar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>lanelet2</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-catkin-tools</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python-is-python3</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>automotive_platform_msgs</exec_depend>
  <exec_depend>automotive_navigation_msgs</exec_depend>
  <exec_depend>novatel_oem7_msgs</exec_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
